Fix stream shift tooltip.

--- a/app/components-react/windows/go-live/GoLive.m.less
+++ b/app/components-react/windows/go-live/GoLive.m.less
@@ -89,7 +89,7 @@
 }
 
 button.bottom {
-  margin: 15px 15px 0px 15px !important;
+  margin-top: 15px;
 }
 
 .right-text {
